Standarizacion fase 3, comuniti y enterprise funcionando acciones de dev funcionando, falta validar funciones de git y commit final inicial

--- a/.env.example
+++ b/.env.example
@@ -50,10 +50,10 @@ DOMAIN_ROOT=yourdomain.com
 ODOO_ADMIN_PASSWORD=your_odoo_admin_password_here
 # Nombre de la instancia de producción (default: odoo-production)
 PROD_INSTANCE_NAME=odoo-production
-# Ruta raíz de las instancias de producción
-PROD_ROOT=/home/go/apps/production/odoo-enterprise
-# Ruta raíz de las instancias de desarrollo
-DEV_ROOT=/home/go/apps/develop/odoo-enterprise
+# Ruta raíz de las instancias de producción (unificada para Enterprise y Community)
+PROD_ROOT=/home/go/apps/production/odoo
+# Ruta raíz de las instancias de desarrollo (unificada para Enterprise y Community)
+DEV_ROOT=/home/go/apps/develop/odoo
 # Ruta del repositorio Odoo (archivo ZIP)
 ODOO_REPO_PATH=/home/go/apps/repo/odoo19e.zip
 # Binario de Python a utilizar
